# docgpt

./: .gitignore  CHANGELOG.md  Makefile  README.md  env.yaml  pyproject.toml
.github/workflows/: ci.yml
docgpt/: api_key.py  io.py  main.py  model.py  stdout.py
pydoc_gpt/: main.py
tests/: test_main.py  test_model.py
